template and views

--- a/templates/ADMIN/admin complaints.html
+++ b/templates/ADMIN/admin complaints.html
@@ -11,10 +11,10 @@
   <tr>
     <td width="100">From Date</td>
     <td width="199"><label for="textfield"></label>
-      <input type="text" name="textfield" id="textfield" /></td>
-    <td width="63">to date</td>
+      <input type="text" name="from" id="textfield" /></td>
+    <td width="63">To date</td>
     <td width="199"><label for="textfield2"></label>
-      <input type="text" name="textfield2" id="textfield2" /></td>
+      <input type="text" name="to" id="textfield2" /></td>
         <td width="57"><input type="submit" name="button" id="button" value="search" /></td>
 
   </tr>
