--- a/templates/ADMIN/admin edit police.html
+++ b/templates/ADMIN/admin edit police.html
@@ -7,9 +7,9 @@
 
 <body><form action="" method="post"><table width="416" height="346" border="1" align="center">
   <tr>
-    <td>station name </td>
+    <td>station name</td>
     <td><label for="textfield"></label>
-      <input type="text" name="textfield" id="textfield" /></td>
+      <input type="text" name="station" id="textfield" /></td>
   </tr>
   <tr>
     <td>SI name </td>
@@ -34,7 +34,7 @@
   <tr>
     <td>Email ID</td>
     <td><label for="textfield6"></label>
-      <input type="text" name="emailid" id="textfield6" /></td>
+      <input type="text" name="email id" id="textfield6" /></td>
   </tr>
   <tr>
     <td>phone </td>
