--- a/templates/ADMIN/admin suspicious activity.html
+++ b/templates/ADMIN/admin suspicious activity.html
@@ -8,12 +8,12 @@
 <body>
 <form id="form1" name="form1" method="post" action=""><table width="375" border="1">
   <tr>
-    <td width="49">from</td>
+    <td width="49">From</td>
     <td width="6"><label for="textfield"></label>
-      <input type="date" name="textfield" id="textfield" /></td>
-    <td width="21">to</td>
+      <input type="date" name="from" id="textfield" /></td>
+    <td width="21">To</td>
     <td width="6"><label for="textfield2"></label>
-      <input type="date" name="textfield2" id="textfield2" /></td>
+      <input type="date" name="to" id="textfield2" /></td>
     <td width="259"><input type="submit" name="button" id="button" value="search" /></td>
   </tr>
 </table>
