--- a/templates/USER/user add family members .html
+++ b/templates/USER/user add family members .html
@@ -7,14 +7,14 @@
 
 <body><form action="" method="post"><table width="416" height="346" border="1" align="center">
   <tr>
-    <td>Name </td>
+    <td>Name</td>
     <td><label for="textfield"></label>
-      <input type="text" name="station name" id="textfield" /></td>
+      <input type="text" name="name" id="textfield" /></td>
   </tr>
   <tr>
     <td>Photo </td>
     <td><label for="textfield2"></label>
-      <input type="file" name="siname" id="textfield2" /></td>
+      <input type="file" name="photo" id="textfield2" /></td>
   </tr>
   <tr>
     <td>Relation</td>
@@ -30,7 +30,7 @@
   <tr>
     <td>Email ID</td>
     <td><label for="textfield6"></label>
-      <input type="text" name="email id" id="textfield6" /></td>
+      <input type="text" name="emailid" id="textfield6" /></td>
   </tr>
   <tr>
     <td>phone </td>
