--- a/templates/USER/user review.html
+++ b/templates/USER/user review.html
@@ -9,8 +9,8 @@
 <form action="" method="post">
 <table width="500" border="1">
   <tr>
-    <td><input name="Review" type="button" value="review" />
-    <input name="Send" type="button" value="send" /></td>
+    <td><input name="reviewbutton" type="button" value="review" />
+    <input name="Sendbutton" type="button" value="send" /></td>
   </tr>
   <tr>
     <td><textarea name="review" cols="35" rows="10"></textarea><br />
