--- a/templates/USER/user view and edit profile.html
+++ b/templates/USER/user view and edit profile.html
@@ -5,7 +5,8 @@
 <title>Untitled Document</title>
 </head>
 
-<body><form action="" method="post"><table width="408" height="346" border="1" align="center">
+<body>
+<form action="" method="post"><table width="408" height="346" border="1" align="center">
   <tr>
     <td width="103">Name </td>
     <td width="219"><label for="textfield"></label>
@@ -17,12 +18,12 @@
       <input type="text" name="emailid" id="textfield6" /></td>
   </tr>
    <tr>
-    <td>phone </td>
+    <td>phone</td>
     <td><label for="textfield7"></label>
-      <input type="text" name="textfield7" id="phone" /></td>
+      <input type="text" name="phone" id="phone" /></td>
   </tr>
   <tr>
-    <td>place </td>
+    <td>place</td>
     <td><label for="textfield3"></label>
       <input type="text" name="place" id="textfield3" /></td>
   </tr>
@@ -39,12 +40,12 @@
   <tr>
     <td>district</td>
     <td><label for="textfield8"></label>
-      <input type="text" name="textfield8" id="textfield8" /></td>
+      <input type="text" name="district" id="textfield8" /></td>
   </tr>
   <tr>
     <td>GENDER</td>
     <td><label for="textfield8"></label>
-      <input type="text" name="textfield8" id="textfield8" /></td>
+      <input type="text" name="gender" id="textfield8" /></td>
   </tr>
   <tr>
     <td colspan="2"><input type="button" name="edit" id="edit" value="Edit" />&nbsp;&nbsp;
