--- a/templates/ADMIN/admin view police.html
+++ b/templates/ADMIN/admin view police.html
@@ -10,7 +10,7 @@
     <table width="200" border="1">
   <tr>
     <td><label for="textfield"></label>
-      <input type="text" name="textfield" id="textfield" /></td>
+      <input type="text" name="name" id="textfield" /></td>
     <td>search</td>
    
   </tr>
