--- a/templates/ADMIN/admin view registered users.html
+++ b/templates/ADMIN/admin view registered users.html
@@ -9,7 +9,7 @@
 <form id="form1" name="form1" method="post" action=""><table width="200" border="1">
   <tr>
     <td><label for="textfield"></label>
-      <input type="text" name="textfield" id="textfield" /></td>
+      <input type="text" name="name" id="textfield" /></td>
     <td>search</td>
    
   </tr>
