--- a/templates/USER/user chat.html
+++ b/templates/USER/user chat.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
 </head><body>
-
+<form action="" method="post">
 <table width="200" border="1">
   <tr>
     <td>From</td>
@@ -14,13 +14,15 @@
     <td><input name="search" type="button" value="Search" /></td>
   </tr>
 </table>
+</form>
 <form action="" method="post">
 <table width="200" border="1">
   <tr>
     <td>Messages;<textarea name="message" cols="1" rows="5"></textarea></td>
   </tr>
   <tr>
-    <td><input name="Send" type="button" value="send" /><input name="Delete" type="button" value="delete" /></td>
+    <td><input name="Send" type="button" value="send" />
+        <input name="Delete" type="button" value="delete" /></td>
   </tr>
 </table>
 
