--- a/templates/USER/user view criminals.html
+++ b/templates/USER/user view criminals.html
@@ -10,7 +10,7 @@
   <tr>
     <td>name</td>
     <td><label for="textfield"></label>
-      <input type="text" name="textfield" id="textfield" /></td>
+      <input type="text" name="name" id="textfield" /></td>
     <td><input type="submit" name="button" id="button" value="GO" /></td>
   </tr>
 </table>
