--- a/templates/ADMIN/admin change password.html
+++ b/templates/ADMIN/admin change password.html
@@ -5,7 +5,9 @@
 <title>Untitled Document</title>
 </head>
 
-<body><form action="" method="post"><table width="372" height="242" align="center" border="1">
+<body><form action="/myapp/changepassword_post/" method="post">
+    {% csrf_token %}
+    <table width="372" height="242" align="center" border="1">
   <tr>
     <td width="104">CURRENT PASSWORD</td>
     <td width="252"><label for="textfield"></label>
