--- a/templates/ADMIN/admin homepage.html
+++ b/templates/ADMIN/admin homepage.html
@@ -5,14 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/myapp/add police/">add police</a><br>
-<a href="/myapp/change password/">change password</a><br>
+<a href="/myapp/add_police/">add police</a><br>
+<a href="/myapp/changepassword/">change password</a><br>
 <a href="/myapp/complaints/">complaints</a><br>
-<a href="/myapp/edit police/">edit police</a><br>
-<a href="/myapp/suspicious_activity/">suspicious_activity</a><br>
-<a href="/myapp/suspicious_activity/">suspicious_activity</a><br>
-<a href="/myapp/suspicious_activity/">suspicious_activity</a><br>
-<a href="/myapp/suspicious_activity/">suspicious_activity</a><br>
+<a href="/myapp/suspicious_activity/">suspicious activity</a><br>
+<a href="/myapp/app_reviews/">App review</a><br>
+<a href="/myapp/view_criminals/">View Criminals</a><br>
+<a href="/myapp/view_police/">View Police</a><br>
+<a href="/myapp/registered_users/">View Registered user</a><br>
 
 </body>
 </html>
