--- a/templates/ADMIN/admin add police.html
+++ b/templates/ADMIN/admin add police.html
@@ -5,7 +5,9 @@
 <title>Untitled Document</title>
 </head>
 
-<body><form action="" method="post"><table width="416" height="346" border="1" align="center">
+<body><form action="/myapp/add_police_post/" method="post">
+    {% csrf_token %}
+    <table width="416" height="346" border="1" align="center">
   <tr>
     <td>station name </td>
     <td><label for="textfield"></label>
@@ -19,7 +21,7 @@
   <tr>
     <td>place </td>
     <td><label for="textfield3"></label>
-      <input type="text" name="place" id="textfield3" /></td>
+      <input type="text" name="PLACE" id="textfield3" /></td>
   </tr>
   <tr>
     <td>post</td>
@@ -39,7 +41,7 @@
   <tr>
     <td>phone </td>
     <td><label for="textfield7"></label>
-      <input type="text" name=phone" id="textfield7" /></td>
+      <input type="text" name="phone" id="textfield7" /></td>
   </tr>
   <tr>
     <td>district</td>
@@ -47,7 +49,7 @@
       <input type="text" name="district" id="textfield8" /></td>
   </tr>
   <tr>
-    <td colspan="2"><input type="button" name="button" id="button" value="Add" /></td>
+    <td colspan="2"><input type="submit" name="button" id="button" value="Add" /></td>
     </tr>
 </table>
 </form>
