--- a/templates/ADMIN/admin view criminals.html
+++ b/templates/ADMIN/admin view criminals.html
@@ -21,10 +21,12 @@
     <td>photo</td>
     <td>details</td>
   </tr>
+       {% for i in data %}
   <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    <td>{{forloop.counter  }}</td>
+    <td>{{ i.photo }}</td>
+    <td>{{ i.details }}</td>
+      {% endfor %}
   </tr>
   </table>
 </form>
