--- a/templates/ADMIN/admin view registered users.html
+++ b/templates/ADMIN/admin view registered users.html
@@ -25,18 +25,18 @@
     <td>photo</td>
 
   </tr>
+    {% for i in data %}
   <tr>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
-        <td></td>
-
-   
+    <td> {{forloop.counter}}&nbsp;</td>
+    <td>{{ i.name }}</td>
+    <td>{{ i.gender }}</td>
+    <td>{{i.place  }}</td>
+    <td>&nbsp;{{i.email  }}</td>
+    <td>{{i.phone  }}</td>
+      <td>{{ i.photo }}</td>
 
   </tr>
+    {% endfor %}
 </table>
 
 </form>
