--- a/templates/ADMIN/admin view registered users.html
+++ b/templates/ADMIN/admin view registered users.html
@@ -6,11 +6,12 @@
 </head>
 
 <body>
-<form id="form1" name="form1" method="post" action=""><table width="200" border="1">
+<form id="form1" name="form1" method="post" action="/myapp/registered_users_post/"><table width="200" border="1">
   <tr>
+      {% csrf_token %}
     <td><label for="textfield"></label>
       <input type="text" name="name" id="textfield" /></td>
-    <td>search</td>
+    <td><input type="submit" value="Search"/></td>
    
   </tr>
 </table>
