--- a/templates/ADMIN/admin view police.html
+++ b/templates/ADMIN/admin view police.html
@@ -6,12 +6,13 @@
 </head>
 
 <body>
-<form id="form1" name="form1" method="post" action="">
+<form id="form1" name="form1" method="post" action="/myapp/admin_view_police_post/">
+{% csrf_token %}
     <table width="200" border="1">
   <tr>
     <td><label for="textfield"></label>
       <input type="text" name="name" id="textfield" /></td>
-    <td>search</td>
+      <td><input type="submit" value="search"/></td>
    
   </tr>
 </table>
@@ -35,9 +36,9 @@
     <td>{{ i.place }}</td>
     <td>{{ i.email_id }}</td>
     <td>{{ i.phone }}</td>
-        <td><a href="#">Edit</a></td>
+        <td><a href="/myapp/edit_police/{{ i.id }}">Edit</a></td>
 
-    <td><a href="#">Delete</a></td>
+    <td><a href="/myapp/admin_delete_police/{{ i.id }}">Delete</a></td>
 
   </tr>
     {% endfor %}
