--- a/templates/POLICE/Police_index.html
+++ b/templates/POLICE/Police_index.html
@@ -170,7 +170,7 @@
 
 {#                <li><a href="/myapp/complaints/#mu-features">View Complaint</a></li>#}
 
-                <li><a href="/myapp/app_reviews/#mu-features">View Review</a></li>
+{#                <li><a href="/myapp/app_reviews/#mu-features">View Review</a></li>#}
                 <li><a href="/myapp/police_change_password/#mu-features">ChangePassword</a></li>
 
 
