--- a/templates/ADMIN/Admin_index.html
+++ b/templates/ADMIN/Admin_index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>SN College  | Home</title>
+    <title>SN College | Home</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="/static/Home/assets/img/favicon.ico" type="image/x-icon">
@@ -178,7 +178,8 @@
                </li>
               <li><a href="/myapp/logout/#mu-features"><i class="fa fa fa-sign-out"></i></a></li>
 
-        </div><!--/.nav-collapse -->        
+        </div>
+          <!--/.nav-collapse -->
       </div>     
     </nav>
   </section>
@@ -253,44 +254,7 @@
     </div>
     <!-- Start single slider item -->    
   </section>
-  <!-- End Slider -->
-  <!-- Start service  -->
-{#  <section id="mu-service">#}
-{#    <div class="container">#}
-{#      <div class="row">#}
-{#        <div class="col-lg-12 col-md-12">#}
-{#          <div class="mu-service-area">#}
-{#            <!-- Start single service -->#}
-{#            <div class="mu-service-single">#}
-{#              <span class="fa fa-book"></span>#}
-{#              <h3>Learn Online</h3>#}
-{#              <p>Learning online offers flexible education through digital platforms, enabling access to diverse courses and resources from anywhere.</p>#}
-{#            </div>#}
-{#            <!-- Start single service -->#}
-{#            <!-- Start single service -->#}
-{#            <div class="mu-service-single">#}
-{#              <span class="fa fa-users"></span>#}
-{#              <h3>Expert Teachers</h3>#}
-{#              <p>Expert teachers possess profound knowledge, exceptional communication skills, and a passion for guiding and inspiring students.</p>#}
-{#            </div>#}
-{#            <!-- Start single service -->#}
-{#            <!-- Start single service -->#}
-{#            <div class="mu-service-single">#}
-{#              <span class="fa fa-table"></span>#}
-{#              <h3>Best Classrooms</h3>#}
-{#              <p>The best classrooms are dynamic spaces that inspire learning, equipped with state-of-the-art technology and ergonomic design.</p>#}
-{#            </div>#}
-{#            <!-- Start single service -->#}
-{#          </div>#}
-{#        </div>#}
-{#      </div>#}
-{#    </div>#}
-{#  </section>#}
-  <!-- End service  -->
 
-
-
-  <!-- Start features section -->
   <section id="mu-features">
     <div class="container">
       <div class="row">
@@ -312,8 +276,6 @@
   <!-- End features section -->
 
 
-
-
   <!-- Start footer -->
   <footer id="mu-footer">
     <!-- start footer top -->
@@ -327,8 +289,8 @@
                 <ul>
                   <li><a href="#">About Us</a></li>
                   <li><a href="">Features</a></li>
-                  <li><a href="">Course</a></li>
-                  <li><a href="">Event</a></li>
+                  <li><a href="">Availibilty</a></li>
+                  <li><a href="">Events</a></li>
                   <li><a href="">Sitemap</a></li>
                   <li><a href="">Term Of Use</a></li>
                 </ul>
@@ -336,23 +298,20 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
               <div class="mu-footer-widget">
-                <h4>Student Help</h4>
+                <h4>Support</h4>
                 <ul>
                   <li><a href="">Get Started</a></li>
-                  <li><a href="#">My Questions</a></li>
-                  <li><a href="">Download Files</a></li>
-                  <li><a href="">Latest Course</a></li>
-                  <li><a href="">Academic News</a></li>                  
+                  <li><a href="#">Questions</a></li>
                 </ul>
               </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
               <div class="mu-footer-widget">
                 <h4>News letter</h4>
-                <p>Get latest update, news & academic offers</p>
+                <p>Contact us</p>
                 <form class="mu-subscribe-form">
                   <input type="email" placeholder="Type your Email">
-                  <button class="mu-subscribe-btn" type="submit">Subscribe!</button>
+                  <button class="mu-subscribe-btn" type="submit">click here</button>
                 </form>               
               </div>
             </div>
