--- a/templates/ADMIN/Admin_index.html
+++ b/templates/ADMIN/Admin_index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>SN College | Home</title>
+    <title>AICCTV | Home</title>
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/static/Home/assets/img/favicon.ico" type="image/x-icon">
+   <link rel="shortcut icon" href="/static/Home/assets/images/logotrans.ico" type="image/x-icon">
 
     <!-- Font awesome -->
     <link href="/static/Home/assets/css/font-awesome.css" rel="stylesheet">
@@ -37,7 +37,7 @@
     <![endif]-->
 
   </head>
-  <body> 
+  <body>
 
   <!--START SCROLL TOP BUTTON -->
     <a class="scrollToTop" href="#">
@@ -58,9 +58,7 @@
                     <i class="fa fa-envelope"></i>
                     <span>info@sncollege.in</span>
                   </div>
-                  <div class="mu-top-phone"> Welcome Admin
-                    <i class="fa fa-phone"></i>
-                    <span>0483 – 2977142</span>
+                  <div class="mu-top-phone"> <i class="fa-solid fa-user-tie"></i> Welcome Admin
                   </div>
                 </div>
               </div>
@@ -70,7 +68,6 @@
                     <ul class="mu-top-social-nav">
                       <li><a href="#"><span class="fa fa-facebook"></span></a></li>
                       <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                      <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
                       <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
                       <li><a href="#"><span class="fa fa-youtube"></span></a></li>
                     </ul>
@@ -98,7 +95,7 @@
           </button>
           <!-- LOGO -->              
           <!-- TEXT BASED LOGO -->
-          <a class="navbar-brand" href="/myapp/homepage/"><i class="fa fa-camera"></i><span>AICCTV </span></a>
+          <a class="navbar-brand" href="/myapp/homepage/"><i><img src="/static/Home/assets/images/logotrans.png" width="50" height="50"/></i><span> AICCTV </span></a>
           <!-- IMG BASED LOGO  -->
           <!-- <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="logo"></a> -->
         </div>
@@ -110,16 +107,8 @@
               <ul class="dropdown-menu" role="menu">
                 <li><a href="/myapp/add_police/#mu-features">Add Station</a></li>
                 <li><a href="/myapp/view_police/#mu-features">View Station</a></li>
-{#                   <li><a href="/collegeapp/add_course/#mu-features">Add Course</a></li>#}
-{#                <li><a href="/collegeapp/view_course/#mu-features">View Course</a></li>#}
-{##}
-{#                     <li><a href="/collegeapp/add_course_Fee/#mu-features">Add Course Fee</a></li>#}
-{#                <li><a href="/collegeapp/view_course_fee/#mu-features">View Course Fee</a></li>#}
-
               </ul>
             </li>
-
-
 
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">User<span class="fa fa-angle-down"></span></a>
@@ -131,15 +120,9 @@
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Criminals<span class="fa fa-angle-down"></span></a>
               <ul class="dropdown-menu" role="menu">
-{#                <li><a href="/collegeapp/add_staff/#mu-features">Add Staff</a></li>#}
-{#                <li><a href="/collegeapp/view_staff/#mu-features">All Staffs</a></li>#}
+
                 <li><a href="/myapp/view_criminals/#mu-features">View Criminals</a></li>
                 <li><a href="/myapp/view_detect_det/#mu-features">View Detect Criminals</a></li>
-{#                <li><a href="/collegeapp/view_temporary_staff/#mu-features">View Temporary Staffs</a></li>#}
-{#                <li><a href="/collegeapp/view_office_staff/#mu-features">View Office Staffs</a></li>#}
-{##}
-{#                <li><a href="/collegeapp/add_HOD/#mu-features">Hod Allocation</a></li>#}
-{#                <li><a href="/collegeapp/view_HOD/#mu-features">View Hod</a></li>#}
 
               </ul>
             </li>
@@ -150,12 +133,6 @@
                 <li><a href="/myapp/suspicious_activity/#mu-features">View Activity</a></li>
               </ul>
                </li>
-
-
-
-
-
-
 
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Others<span class="fa fa-angle-down"></span></a>
@@ -288,9 +265,6 @@
                 <h4>Information</h4>
                 <ul>
                   <li><a href="#">About Us</a></li>
-                  <li><a href="">Features</a></li>
-                  <li><a href="">Availibilty</a></li>
-                  <li><a href="">Events</a></li>
                   <li><a href="">Sitemap</a></li>
                   <li><a href="">Term Of Use</a></li>
                 </ul>
@@ -307,12 +281,12 @@
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
               <div class="mu-footer-widget">
-                <h4>News letter</h4>
+
                 <p>Contact us</p>
                 <form class="mu-subscribe-form">
                   <input type="email" placeholder="Type your Email">
                   <button class="mu-subscribe-btn" type="submit">click here</button>
-                </form>               
+                </form>
               </div>
             </div>
             <div class="col-lg-3 col-md-3 col-sm-3">
@@ -323,7 +297,7 @@
                     HJPJ+3Q5, Keezhal Mukku - Mudappilavil Rd, Mudappilavil, Kerala 673104</p>
                   <p>Phone: 0483 – 2977142 (Office)
                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;080789 92816 (Principal) </p>
-                  <p>Website: www.markups.io</p>
+                  <p>Website: www.sncollege.com</p>
                   <p>Email:info@sncollege.in</p>
                 </address>
               </div>
@@ -337,7 +311,7 @@
     <div class="mu-footer-bottom">
       <div class="container">
         <div class="mu-footer-bottom-area">
-          <p>&copy; All Right Reserved. Designed by <a href="http://www.markups.io/" rel="nofollow">MarkUps.io</a></p>
+          <p>&copy; All Right Reserved.</p>
         </div>
       </div>
     </div>
