--- a/templates/ADMIN/admin suspicious activity.html
+++ b/templates/ADMIN/admin suspicious activity.html
@@ -21,13 +21,13 @@
 </table>
     <table class="table table-bordered">
   <tr>
-    <td>si no </td>
-    <td>date </td>
-    <td>place</td>
-    <td>time</td>
-    <td>photo</td>
-    <td>criminal info</td>
-    <td>activity</td>
+    <td>S/N NO</td>
+    <td>DATE</td>
+    <td>PLACE</td>
+    <td>TIME</td>
+    <td>PHOTO/td>
+    <td>CRIMINAL INFO/RECORDS</td>
+    <td>ACTIVITY</td>
   </tr>
     {% for i in data %}
   <tr>
