--- a/templates/ADMIN/admin view AppReviews.html
+++ b/templates/ADMIN/admin view AppReviews.html
@@ -7,6 +7,10 @@
 {% extends 'ADMIN/Admin_index.html' %}
 {% block body %}
 <body>
+
+<div align="center"><div>
+    <h1 style="font-weight: bold; background: linear-gradient(to right, #799aff, #4EAEFF); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">REVIEWS</h1>
+</div><br>
 <form id="form1" name="form1" method="post" action="/myapp/admin_view_appreviews_post/">
 {% csrf_token %}
 <table class="pull-left">
