--- a/templates/ADMIN/admin view police.html
+++ b/templates/ADMIN/admin view police.html
@@ -2,29 +2,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>POLICE MANAGEMENT | VIEW</title>
 </head>
 {% extends 'ADMIN/Admin_index.html' %}
 {% block body %}
 <body>
 <form id="form1" name="form1" method="post" action="/myapp/admin_view_police_post/">
 {% csrf_token %}
+<div align="center"><i class="fa-regular fa-handcuffs"></i>
+    <h1 style="font-weight: bold; background: linear-gradient(to right, #FF3F1F, #4EAEFF); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">POLICE STATION MANAGEMENT</h1>
+</div><br>
     <table class="pull-left">
   <tr>
     <td>
       <input type="text" name="name" id="textfield" class="form-control"/></td>
       <td><input type="submit" value="search" class="btn btn-success"/></td>
-   
-  </tr>
+      <td></td>
+  </tr><br>
 </table>
     <table class="table table-bordered">
   <tr>
-    <td>si no</td>
-    <td>station name</td>
-    <td>si name </td>
-    <td>address</td>
-    <td>email</td>
-    <td>phone</td>
+    <td>SI NO</td>
+    <td>STATION NAME</td>
+    <td>SI NAME </td>
+    <td>ADDRESS</td>
+    <td>EMAIL</td>
+    <td>PHONE</td>
     <td>&nbsp;</td>
         <td>&nbsp;</td>
 
