--- a/templates/loginindex.html
+++ b/templates/loginindex.html
@@ -21,14 +21,15 @@ Author URL: http://w3layouts.com
 
 <body>
     <div class="w3l-signinform">
+
         <!-- container -->
         <div class="wrapper">
             <!-- main content -->
-            <div class="w3l-form-info">
+            <div class="w3l-form-info"><img src="/static/Home/assets/images/logotrans.png" width="100" height="100"/>
                 <div class="w3_info">
                     <h1>Welcome Back</h1>
                     <p class="sub-para"></p>
-                    <h2>Log In</h2>
+                    <h2>LOG IN</h2>
                     <form action="/myapp/login_post/" method="post">
                         {% csrf_token %}
                         <div class="input-group">
@@ -46,7 +47,7 @@ Author URL: http://w3layouts.com
                             </div>
 {#                            <a href="#url" class="forgot">Forgot password?</a>#}
                         </div>
-                        <button class="btn btn-primary btn-block" type="submit">Log In</button>
+                        <button class="btn btn-primary btn-block" type="submit">Log In </button>
                     </form>
                 
 {#                    <p class="account">Don't have an account? <a href="/myapp/compsignup/">Register</a></p>#}
